# md5sum-osx

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  ChangeLog.md  Makefile  Makefile.mingw  README.md  md5.c  md5.h  md5sum.c  md5sum.tmproj  sha256.c  sha256.h  sha256sum.c  sha512.c  sha512.h  sha512sum.c  util.c  util.h  version.h
test/: CMakeLists.txt  test with spaces.md5  test with spaces.sha256  test with spaces.sha512  test.sh  test1.md5  test1.sha256  test1.sha512  test_file_missing.md5  test_file_missing.sha256  test_file_missing.sha512  test_sum_mismatch.md5  test_sum_mismatch.sha256  test_sum_mismatch.sha512  test_with_asterisk.md5  test_with_asterisk.sha256  test_with_asterisk.sha512
