PROJECT(md5sum-osx)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
CMAKE_POLICY(VERSION 2.6)

INCLUDE(CTest)
ENABLE_TESTING()

#INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

SET(COMMON_SOURCES "util.c")

SET(MD5SUM_SOURCES md5.c md5sum.c ${COMMON_SOURCES})
SET(SHA256SUM_SOURCES sha256.c sha256sum.c ${COMMON_SOURCES})

IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    SET(SHA256SUM_SOURCES ${SHA256SUM_SOURCES} external/sha2.c)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")


ADD_EXECUTABLE(md5sum ${MD5SUM_SOURCES})
TARGET_LINK_LIBRARIES(md5sum "crypto")

ADD_EXECUTABLE(sha256sum ${SHA256SUM_SOURCES})

IF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    TARGET_LINK_LIBRARIES(md5sum "crypto")
    TARGET_LINK_LIBRARIES(sha256sum "crypto")
ENDIF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")

ADD_SUBDIRECTORY(test)
    